--- a/Fairies/php/form_customer.css
+++ b/Fairies/php/form_customer.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #19A7CE;
+    background-color: #FFFCA8;
 }
 header h1{
     height: 75px;
@@ -17,7 +17,7 @@ header h1 img{
 nav{
     position:absolute;
     left:1220px;
-    bottom: 660px;
+    bottom: 675px;
 }
 /* ログアウトボタンのスタイル */
 .button {
@@ -33,63 +33,4 @@ nav{
 }
 .button:active {
     transform: translateY(3px); /* ボタンがクリックされたときに少し下に移動させる */
-}
-form {
-    max-width: 600px;
-    font-size: 30px;
-    margin: 20px auto;
-    background-color: #fff;
-    padding: 30px;
-    border-radius: 10px;
-}
-
-main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width:600px;
-    height: 100px;
-    top: 80px;
-    left: 255px;
-    position: relative;
-    font-family: 'Kiwi Maru', serif; /*フォントの種類を設定*/
-    background-color: gray;
-    width: 1000px;
-    height: 1600px;
-    border-radius: 10px; /* 角の丸みを指定 */
-}
-.tital{
-    background-color: white;
-    width: 600px;
-    height: 100px;
-    border-radius: 10px; /* 角の丸みを指定 */
-    position: absolute;
-    left: 200px;
-    bottom: 1460px;
-    font-size: 22.2px;
-    text-align: center;
-}
-textarea {
-    width: 100%;
-    padding: 5px;
-}
-
-input[type=text] {
-    width: 60%;
-    padding: 5px;
-}
-
-#submit {
-    width: 100%;
-    height: 2em;
-    font-size: 1.3em;
-    background-color: #70cec2;
-    margin-top: 20px;
-    border: none;
-    border-radius: 10px;
-    font-family: 'Kiwi Maru', serif; /*フォントの種類を設定*/
-}
-.font{
-    font-size: 22px;
 }
