--- a/Fairies/php/home_employee.css
+++ b/Fairies/php/home_employee.css
@@ -124,9 +124,11 @@ h2 {
 
 }
 
+.soto {
+  margin-left: 15px;
+}
+
 /* 検索入力のスタイル */
-
-
 input[type="search"] {
   flex: 1;
   /*水平方向の伸縮性*/
@@ -139,6 +141,7 @@ input[type="search"] {
   border-radius: 3px;
   /* 周りの線の角を指定 */
   font-size: 30px;
+  margin-left: 15px;
 }
 
 
@@ -310,6 +313,7 @@ table td {
 
 }
 
+
 .category {
 
   margin-right: 5px;
@@ -334,6 +338,7 @@ table td {
   padding-top: 15px;
   /* 上側のパディングを指定 */
 }
+
 
 #customer_about {
   /* 横幅 */
