--- a/Fairies/php/user_register.css
+++ b/Fairies/php/user_register.css
@@ -1,146 +1,147 @@
-
 body {
-    background-color: #19A7CE;
-    width:100vh
+  background-color: #19a7ce;
+  width: 100vh;
 }
-header h1{
-    height: 75px;
-    width: 1520px;
-    background-color: white;
-    padding: 5px;
-    margin: -10px;
-    border-bottom: 2px solid darkgray;
-    position: relative;/*親要素にログアウトボタンのポジションの形式を付与*/
+header h1 {
+  height: 75px;
+  width: 1520px;
+  background-color: white;
+  padding: 5px;
+  margin: -10px;
+  border-bottom: 2px solid darkgray;
+  position: relative; /*親要素にログアウトボタンのポジションの形式を付与*/
 }
-header h1 img{
-    margin: 10px;
+header h1 img {
+  margin: 10px;
 }
 /*ログアウトボタンのポジションを調整*/
-nav{
-    position:absolute;
-    left:1220px;
-    bottom: 660px;
+nav {
+  position: absolute;
+  left: 1220px;
+  bottom: 660px;
 }
 /* ログアウトボタンのスタイル */
 .button {
-    font-size:20px; /* 必要に応じてフォントサイズを調整してください */
-    letter-spacing: 5px; /* 文字と文字の間隔を2ピクセルに設定 */
-    padding: 20px 35px; /* 必要に応じて余白を調整してください */
-    border: none; /* 外枠を削除 */
-    background-color: white;
-    border-left: 5px solid aqua; /* 左側のボーダーを設定 */
-    border-right: 5px solid aqua; /* 右側のボーダーを設定 */
-    font-family: 'Kiwi Maru', serif;/*フォントの種類を設定*/
-    transition: transform 0.2s; /* 変化がスムーズになるようにトランジションを追加 */
+  font-size: 20px; /* 必要に応じてフォントサイズを調整してください */
+  letter-spacing: 5px; /* 文字と文字の間隔を2ピクセルに設定 */
+  padding: 20px 35px; /* 必要に応じて余白を調整してください */
+  border: none; /* 外枠を削除 */
+  background-color: white;
+  border-left: 5px solid aqua; /* 左側のボーダーを設定 */
+  border-right: 5px solid aqua; /* 右側のボーダーを設定 */
+  font-family: "Kiwi Maru", serif; /*フォントの種類を設定*/
+  transition: transform 0.2s; /* 変化がスムーズになるようにトランジションを追加 */
 }
 .button:active {
-    transform: translateY(3px); /* ボタンがクリックされたときに少し下に移動させる */
+  transform: translateY(
+    3px
+  ); /* ボタンがクリックされたときに少し下に移動させる */
 }
-header div{
-    background-color: gray;
-    padding: 5px;
-    height: 150px;
-    margin-left: 255px;
-    margin-right: 255px;
-    margin-top: 20px;
-    border-top-left-radius: 10px; /* 角の丸みを指定 */
-    border-top-right-radius: 10px; /* 角の丸みを指定 */
+header div {
+  background-color: gray;
+  padding: 5px;
+  height: 150px;
+  margin-left: 255px;
+  margin-right: 255px;
+  margin-top: 20px;
+  border-top-left-radius: 10px; /* 角の丸みを指定 */
+  border-top-right-radius: 10px; /* 角の丸みを指定 */
 }
-header h2{
-    text-align: center;
-    padding: 15px;
-    font-size: 35px;
-    background-color: white;
-    border-radius: 10px; /* 角の丸みを指定 */
-    width: 61%;
-    margin-top: 50px;
-    margin-left: 177px;
-    margin-bottom: 0px;
-    font-family: 'Kiwi Maru', serif; /*フォントの種類を設定*/
+header h2 {
+  text-align: center;
+  padding: 15px;
+  font-size: 35px;
+  background-color: white;
+  border-radius: 10px; /* 角の丸みを指定 */
+  width: 61%;
+  margin-top: 50px;
+  margin-left: 177px;
+  margin-bottom: 0px;
+  font-family: "Kiwi Maru", serif; /*フォントの種類を設定*/
 }
 
 main {
-    max-width: 54%;
-    margin: -10px auto;
-    padding: 90px;
-    background-color: gray;
-    border-radius: 5px;
-    /* 新しいスタイル */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    height: 100vh;
-    /* 画面の高さいっぱいに表示 */
-    font-family: 'Kiwi Maru', serif; /*フォントの種類を設定*/
-    border-bottom-left-radius: 10px; /* 角の丸みを指定 */
-    border-bottom-right-radius: 10px; /* 角の丸みを指定 */
+  max-width: 54%;
+  margin: -10px auto;
+  padding: 90px;
+  background-color: gray;
+  border-radius: 5px;
+  /* 新しいスタイル */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+  /* 画面の高さいっぱいに表示 */
+  font-family: "Kiwi Maru", serif; /*フォントの種類を設定*/
+  border-bottom-left-radius: 10px; /* 角の丸みを指定 */
+  border-bottom-right-radius: 10px; /* 角の丸みを指定 */
 }
-main h2{
-    font-size: 30px;
+main h2 {
+  font-size: 30px;
 }
-#team{
-    font-size: 15px; /* メニュー項目のフォントサイズを大きくする */
-    padding: 10px; /* メニューの上下左右の余白を追加 */
-    margin: 15px;
-    width: 200px; /* メニューの幅を設定 */
-    margin-left: 25px;
-    font-family: 'Kiwi Maru', serif; /*フォントの種類を設定*/
+#team {
+  font-size: 15px; /* メニュー項目のフォントサイズを大きくする */
+  padding: 10px; /* メニューの上下左右の余白を追加 */
+  margin: 15px;
+  width: 200px; /* メニューの幅を設定 */
+  margin-left: 25px;
+  font-family: "Kiwi Maru", serif; /*フォントの種類を設定*/
 }
 /*題のフォントサイズを変更*/
-.font-size{
-    font-size: 23px;
+.font-size {
+  font-size: 23px;
 }
 
 #screen {
-    width: 70%;
-    background-color: #fff;
-    padding: 30px;
-    border-radius: 10px; /* 角の丸みを指定 */
+  width: 70%;
+  background-color: #fff;
+  padding: 30px;
+  border-radius: 10px; /* 角の丸みを指定 */
 }
 
 form {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 label {
-    font-weight: bold;
-    margin-bottom: 5px;
+  font-weight: bold;
+  margin-bottom: 5px;
 }
 
 input[type="text"],
 input[type="password"],
 input[type="number"],
 input[type="date"] {
-    padding: 10px;
-    margin-top:20px;
-    margin-left:25px;
-    margin-bottom: 20px;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    font-family: 'Kiwi Maru', serif; /*フォントの種類を設定*/
+  padding: 10px;
+  margin-top: 20px;
+  margin-left: 25px;
+  margin-bottom: 20px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  font-family: "Kiwi Maru", serif; /*フォントの種類を設定*/
 }
 
 input[type="text"]:focus,
 input[type="password"]:focus,
 input[type="number"]:focus,
 input[type="date"]:focus {
-    border-color: #49ada1;
+  border-color: #49ada1;
 }
 main button {
-    width: 30%;
-    padding: 15px;
-    margin-left: 170px;
-    margin-top: 50px;
-    font-size: 18px;
-    background-color: #49ada1;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    font-family: 'Kiwi Maru', serif; /*フォントの種類を設定*/
+  width: 30%;
+  padding: 15px;
+  margin-left: 170px;
+  margin-top: 50px;
+  font-size: 18px;
+  background-color: #49ada1;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  font-family: "Kiwi Maru", serif; /*フォントの種類を設定*/
 }
 
 main button:hover {
-    background-color: #ab753e;
+  background-color: #ab753e;
 }
