--- a/Fairies/php/user_register.css
+++ b/Fairies/php/user_register.css
@@ -1,25 +1,52 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-  background-color: #19a7ce;
-  width: 100vh;
+  background-color: #f8fefe;
 }
-header h1 {
-  height: 75px;
-  width: 1520px;
-  background-color: white;
-  padding: 5px;
-  margin: -10px;
-  border-bottom: 2px solid darkgray;
-  position: relative; /*親要素にログアウトボタンのポジションの形式を付与*/
+
+header {
+  background-color: #b0daff;
+  height: 5em;
+  /* 配置 */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-header h1 img {
-  margin: 10px;
+
+header img {
+  /* 高さ */
+  height: 4.5rem;
+  /* 横幅 */
+  width: 35vh;
+  margin-left: 15px;
 }
+header a {
+  /* テキストサイズ */
+  font-size: 1.8rem;
+  background-color: #b0daff;
+  /*枠線・上*/
+  border-top: solid 1px #19a7ce;
+  /*枠線・下*/
+  border-bottom: solid 1px #19a7ce;
+  /*枠線・右*/
+  border-right: solid 1px #19a7ce;
+  /*枠線・左*/
+  border-left: solid 1px #19a7ce;
+  /* 下線消す */
+  text-decoration: none;
+  margin-right: 15px;
+}
+
 /*ログアウトボタンのポジションを調整*/
-nav {
+/* nav {
   position: absolute;
   left: 1220px;
   bottom: 660px;
-}
+} */
 /* ログアウトボタンのスタイル */
 .button {
   font-size: 20px; /* 必要に応じてフォントサイズを調整してください */
@@ -37,7 +64,7 @@ nav {
     3px
   ); /* ボタンがクリックされたときに少し下に移動させる */
 }
-header div {
+/* header div {
   background-color: gray;
   padding: 5px;
   height: 150px;
@@ -45,22 +72,22 @@ header div {
   margin-right: 255px;
   margin-top: 20px;
   border-top-left-radius: 10px; /* 角の丸みを指定 */
-  border-top-right-radius: 10px; /* 角の丸みを指定 */
-}
-header h2 {
+/* border-top-right-radius: 10px;  */
+/* }  */
+
+/* header h2 {
   text-align: center;
   padding: 15px;
   font-size: 35px;
   background-color: white;
   border-radius: 10px; /* 角の丸みを指定 */
-  width: 61%;
+/* width: 61%;
   margin-top: 50px;
   margin-left: 177px;
   margin-bottom: 0px;
   font-family: "Kiwi Maru", serif; /*フォントの種類を設定*/
-}
-
-main {
+/* } */
+*/ */ main {
   max-width: 54%;
   margin: -10px auto;
   padding: 90px;
