--- a/Fairies/php/user_register.css
+++ b/Fairies/php/user_register.css
@@ -13,7 +13,7 @@ body {
 header {
   background-color: #f8fefe;
   /* TODO 他のページとの統一 */
-  height: 5em;
+  height: 7vw;
   /* 配置 */
   display: flex;
   align-items: center;
@@ -22,7 +22,7 @@ header {
 
 header img {
   /* 高さ */
-  height: 4.5rem;
+  height: 80%;
   /* 横幅 */
   width: 35vh;
   margin-left: 15px;
@@ -31,7 +31,7 @@ header img {
 /* TODO ボタンデザインの調整 */
 header a {
   /* テキストサイズ */
-  font-size: 1.8rem;
+  font-size: 5vmin;
   background-color: #b0daff;
   /*枠線・上*/
   border-top: solid 1px #19a7ce;
@@ -44,6 +44,9 @@ header a {
   /* 下線消す */
   text-decoration: none;
   margin-right: 15px;
+  /* 高さ */
+  height: 7vmin;
+  align-items: center;
 }
 /* カーソルの重なったときの処理 */
 header a :hover {
@@ -53,7 +56,7 @@ header a :hover {
 /* main */
 main {
   /* サイズ */
-  max-width: 56%;
+  max-width: 50vw;
   /* 配置（真ん中） */
   margin: 20px auto;
   /* 内の距離 */
@@ -74,7 +77,7 @@ main {
   /* 中身の配置 */
   text-align: center;
   /* 文字サイズ */
-  font-size: x-large;
+  font-size: 3vmin;
 }
 h2 {
   /* 配置真ん中 */
@@ -92,13 +95,13 @@ h2 {
 }
 /* 説明欄の大きさ */
 p {
-  font-size: x-small;
+  font-size: 1.5vmin;
   /* 外配置 */
   margin: 5px 20px;
 }
 /* 選択項目 */
 select {
-  font-size: small;
+  font-size: 2vmin;
   /* 内配置 */
   padding: 10px;
   /* 外配置 */
@@ -111,7 +114,7 @@ select {
 }
 /* 項目タイトル */
 label {
-  font-size: large;
+  font-size: 2.5vmin;
   /* 太文字 */
   font-weight: bold;
   /* 外配置 */
@@ -135,8 +138,8 @@ button {
   /* サイズ */
   width: 30%;
   /* 内配置 */
-  padding: 15px;
-  font-size: large;
+  padding: 2vmin;
+  font-size: 2.5vmin;
   /* 真ん中 */
   margin: 0 auto;
   display: flex;
