--- a/Fairies/php/form_employee.css
+++ b/Fairies/php/form_employee.css
@@ -16,88 +16,118 @@ header {
   align-items: center;
   justify-content: space-between;
 }
-header h1 img {
-  margin: 10px;
+header img {
+  /* 高さ */
+  height: 80%;
+  /* 横幅 */
+  width: 35vh;
+  margin-left: 15px;
 }
-/*ログアウトボタンのポジションを調整*/
-nav {
-  position: absolute;
-  left: 1220px;
-  bottom: 660px;
+header a {
+  /* テキストサイズ */
+  font-size: 5vmin;
+  background-color: #b0daff;
+  /*枠線・上*/
+  border-top: solid 1px #19a7ce;
+  /*枠線・下*/
+  border-bottom: solid 1px #19a7ce;
+  /*枠線・右*/
+  border-right: solid 1px #19a7ce;
+  /*枠線・左*/
+  border-left: solid 1px #19a7ce;
+  /* 下線消す */
+  text-decoration: none;
+  margin-right: 15px;
+  /* 高さ */
+  height: 7vmin;
+  align-items: center;
 }
-/* ログアウトボタンのスタイル */
-.button {
-  font-size: 25px; /* 必要に応じてフォントサイズを調整してください */
-  letter-spacing: 5px; /* 文字と文字の間隔を2ピクセルに設定 */
-  padding: 20px 35px; /* 必要に応じて余白を調整してください */
-  border: none; /* 外枠を削除 */
-  background-color: white;
-  border-left: 5px solid aqua; /* 左側のボーダーを設定 */
-  border-right: 5px solid aqua; /* 右側のボーダーを設定 */
-  font-family: "Kiwi Maru", serif; /*フォントの種類を設定*/
-  transition: transform 0.2s; /* 変化がスムーズになるようにトランジションを追加 */
+/* カーソルの重なったときの処理 */
+header a :hover {
+  background-color: aqua;
 }
-.button:active {
-  transform: translateY(
-    3px
-  ); /* ボタンがクリックされたときに少し下に移動させる */
-}
-form {
-  max-width: 600px;
-  font-size: 30px;
+/* main */
+main {
+  /* サイズ */
+  max-width: 60vw;
+  /* 配置（真ん中） */
   margin: 20px auto;
-  background-color: #fff;
-  padding: 30px;
-  border-radius: 10px;
+  /* 内の距離 */
+  padding: 20px;
+  /* 角の丸み */
+  border-radius: 5px;
+  background-color: #e5e5e5;
+}
+/* タイトル */
+#title {
+  background-color: #f8fefe;
+  /* 内外の配置 */
+  margin: 15px;
+  padding: 20px;
+  /* 角の丸み */
+  border-radius: 5px;
+  /* 中身の配置 */
+  text-align: center;
+  /* 文字サイズ */
+  font-size: 3vmin;
+}
+h2 {
+  /* 配置真ん中 */
+  margin: 0 auto;
 }
 
-main {
+/* 選択肢たちの割の枠 */
+.select {
+  background-color: #f8fefe;
+  /* 内外の配置 */
+  margin: 15px;
+  padding: 20px;
+  /* 角の丸み */
+  border-radius: 5px;
+}
+/* 説明欄の大きさ */
+p {
+  font-size: 2.5vmin;
+  /* 太文字 */
+  font-weight: bold;
+  /* 外配置 */
+  margin-bottom: 10px;
+}
+label{
+    margin: 5px;
+}
+/* テキストエリア */
+textarea {
+  width: 90%;
+  margin: 20px;
+  padding: 5px;
+  /* 大きさを変えないようにする */
+  resize:none;
+  /* 周りの色 */
+  border: 3px solid #cccccc;
+  border-radius: 5px;
+}
+textarea:focus {
+border:3px solid #b0daff;
+outline:0;
+}
+/* button */
+button {
+  /* サイズ */
+  width: 30%;
+  /* 内配置 */
+  padding: 2vmin;
+  font-size: 2.5vmin;
+  /* 真ん中 */
+  margin: 0 auto;
   display: flex;
   justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  width: 600px;
-  height: 100px;
-  top: 80px;
-  left: 255px;
-  position: relative;
-  font-family: "Kiwi Maru", serif; /*フォントの種類を設定*/
-  background-color: gray;
-  width: 1000px;
-  height: 1600px;
-  border-radius: 10px; /* 角の丸みを指定 */
-}
-.tital {
-  background-color: white;
-  width: 600px;
-  height: 100px;
-  border-radius: 10px; /* 角の丸みを指定 */
-  position: absolute;
-  left: 200px;
-  bottom: 1460px;
-  font-size: 22.2px;
-  text-align: center;
-}
-textarea {
-  width: 100%;
-  padding: 5px;
-}
-
-input[type="text"] {
-  width: 60%;
-  padding: 5px;
-}
-
-#submit {
-  width: 100%;
-  height: 2em;
-  font-size: 1.3em;
-
-  margin-top: 20px;
+  /* 色 */
+  background-color: #f8fefe;
+  /* 枠 */
   border: none;
-  border-radius: 10px;
-  font-family: "Kiwi Maru", serif; /*フォントの種類を設定*/
+  border-radius: 5px;
 }
-.font {
-  font-size: 22px;
+button:hover {
+  background-color: #b0daff;
 }
