--- a/Fairies/php/personal_employee.css
+++ b/Fairies/php/personal_employee.css
@@ -6,11 +6,13 @@
 }
 body {
   background-color: #b0daff;
+  height: 100vh;
+  overflow: hidden;
 }
 /* header */
 header {
   background-color: #f8fefe;
-  height: 7vw;
+  height: 15%;
   /* 配置 */
   display: flex;
   align-items: center;
@@ -24,86 +26,79 @@ header img {
   width: 35vh;
   margin-left: 15px;
 }
-header h1 {
-  height: 75px;
-  width: 1520px;
-  background-color: white;
-  padding: 5px;
-  margin: -10px;
-  border-bottom: 2px solid darkgray;
-  position: relative; /*親要素にログアウトボタンのポジションの形式を付与*/
+header a {
+  /* テキストサイズ */
+  font-size: 5vmin;
+  background-color: #b0daff;
+  /*枠線・上*/
+  border-top: solid 1px #19a7ce;
+  /*枠線・下*/
+  border-bottom: solid 1px #19a7ce;
+  /*枠線・右*/
+  border-right: solid 1px #19a7ce;
+  /*枠線・左*/
+  border-left: solid 1px #19a7ce;
+  /* 下線消す */
+  text-decoration: none;
+  margin-right: 15px;
+  /* 高さ */
+  height: 7vmin;
+  align-items: center;
 }
-header h1 img {
-  margin: 10px;
-}
-/*ログアウトボタンのポジションを調整*/
-nav {
-  position: absolute;
-  left: 1220px;
-  bottom: 660px;
-}
-/* ログアウトボタンのスタイル */
-.button {
-  font-size: 25px; /* 必要に応じてフォントサイズを調整してください */
-  letter-spacing: 5px; /* 文字と文字の間隔を2ピクセルに設定 */
-  padding: 20px 35px; /* 必要に応じて余白を調整してください */
-  border: none; /* 外枠を削除 */
-  background-color: white;
-  border-left: 5px solid aqua; /* 左側のボーダーを設定 */
-  border-right: 5px solid aqua; /* 右側のボーダーを設定 */
-  transition: transform 0.2s; /* 変化がスムーズになるようにトランジションを追加 */
-}
-.button:active {
-  transform: translateY(
-    3px
-  ); /* ボタンがクリックされたときに少し下に移動させる */
+/* カーソルの重なったときの処理 */
+header a :hover {
+  background-color: aqua;
 }
 /*親要素にポジションの形式を付与*/
 main {
-  position: relative;
-  left: 70px;
-  top: 50px;
+  height: 75%;
 }
 #STATUS {
+  width: fit-content;
   display: flex;
-  gap: 0px;
-  position: absolute;
+  gap: 5px;
   margin-top: 18px;
-  margin-left: 100px;
-  font-size: 30px;
-  text-decoration: underline blue; /*bottom-borderだとテキストとボーダーラインが離れすぎててだめなので代替えとして*/
+  margin-left: 5%;
+  font-size: 4vmin;
+  border-bottom: 3px solid #19a7ce;
   text-underline-offset: 2px;
 }
 #name {
-  position: absolute;
-  margin-top: 40px;
-  margin-left: 555px;
-  font-size: 50px;
+  width: fit-content;
+  margin: 0 auto;
+  font-size: 7.5vmin;
   letter-spacing: 6px;
-  background-color: white;
-  border-radius: 10px; /* 角の丸みを指定 */
+  background-color: #f8fefe;
+  border-radius: 5px; /* 角の丸みを指定 */
 }
-.comment {
-  position: absolute;
-  margin-top: 200px;
-  margin-left: 350px;
-  font-size: 30px;
+#comment {
+  margin-left: 30vmin;
+  font-size: 4vmin;
   text-align: center;
-  background-color: white;
+  background-color: #f8fefe;
   width: 700px;
-  border-top-left-radius: 20px; /* 角の丸みを指定 */
-  border-bottom-left-radius: 20px; /* 角の丸みを指定 */
-  border-top-right-radius: 100px; /* 角の丸みを指定 */
-  border-bottom-right-radius: 100px; /* 角の丸みを指定 */
+  border-radius: 5px;
+  height: 60%;
+  overflow: scroll;
+  border: 4px solid #19a7ce;
 }
-.people_image {
-  position: absolute;
-  margin-top: 200px;
-  margin-left: 900px;
+
+#people_image {
+  width: 280px;
+  height: 320px;
+  margin-right: 30vmin;
 }
-.duration {
-  position: absolute;
-  margin-top: 380px;
-  margin-left: 190px;
-  font-size: 40px;
+#status_about {
+  height: 30%;
+}
+#massage {
+  height: 50%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+#duration {
+  height: 20%;
+  margin-left: 8rem;
+  font-size: 4.5vmin;
 }
