--- a/Fairies/php/personal_customer.css
+++ b/Fairies/php/personal_customer.css
@@ -49,19 +49,17 @@ header a :hover {
   background-color: aqua;
 }
 main {
-  height: 75%;
+  height: 85%;
+  position: relative;
 }
 /* 番号、日付、名前の枠*/
 #information {
-  background-color: aquamarine;
   width: 70%;
   height: 30%;
-
   display: flex;
 }
 /* 番号と日付 */
 #status {
-  background-color: #b0daff;
   width: fit-content;
   height: fit-content;
   gap: 8px;
@@ -69,15 +67,15 @@ main {
   margin-left: 5%;
   display: flex;
   font-size: 4vmin;
-  border-bottom: 3px solid #19a7ce;
+  border-bottom: 3px solid #e9b824;
   text-underline-offset: 2px;
 }
 
 /*名前欄のデザイン*/
 #name {
-    width: fit-content;
-    height: fit-content;
-    /* 真ん中 */
+  width: fit-content;
+  height: fit-content;
+  /* 真ん中 */
   display: flex;
   align-items: center;
   margin: auto auto;
@@ -86,47 +84,70 @@ main {
   background-color: #f8fefe;
   border-radius: 5px; /* 角の丸みを指定 */
 }
+/* 選択情報の枠 */
+#word {
+  width: 70%;
+  height: 70%;
+}
+/* 壊れた個所 */
+#home_condition {
+  margin-left: 13%;
+  font-size: 4vmin;
+}
+/* 画像など */
+#home {
+  display: flex;
+  height: 95%;
+  position: relative;
+}
+
 /*理由欄のデザイン*/
-.comment {
+#comment {
   position: absolute;
-  top: 220px;
-  left: 550px;
-  padding: 50px;
-  font-size: 30px;
-  background-color: white;
-  height: 300px;
-  border-radius: 20px;
+  right: 0;
+  padding: 4vmin;
+  font-size: 4vmin;
+  background-color: #f8fefe;
+  height: 60%;
+  width: 50%;
+  overflow: scroll;
+  /*スクロールバー非表示（Firefox）*/
+  scrollbar-width: none;
+  border: 4px solid #e9b824;
+  border-radius: 5px;
 }
-.home_condition {
-  position: absolute;
-  top: 170px;
-  left: 170px;
-  font-size: 40px;
+#comment p {
+  overflow-wrap: break-word;
 }
-.home_detail {
-  position: absolute;
-  top: 250px;
-  left: 410px;
-  font-size: 30px;
+/* 画像 */
+#home_image {
+  margin-top: 5%;
+  margin-left: 5%;
+  width: 280px;
+  height: 280px;
 }
-.home_image {
+#home_detail {
+  font-size: 4vmin;
+  width: 10%;
   position: absolute;
-  top: 300px;
-  left: 100px;
+  right: calc(50% + 10px);
+  top: 0;
 }
-.folder {
-  width: 350px;
-  height: 520px;
+
+#folder {
+  width: 30%;
+  height: 100%;
   position: absolute;
-  top: 100px;
-  left: 1130px;
+  right: 0;
+  top: 0;
   display: flex;
   flex-flow: column;
-  margin: 1px auto;
+  justify-content: center;
+  align-items: center;
 }
 .photo {
-  background-color: white;
-  width: 350px;
-  height: 520px;
-  margin: 3px auto;
+  background-color: #f8fefe;
+  width: 80%;
+  margin: 5px 0;
+  flex-grow: 1;
 }
