--- a/Fairies/php/form_customer.css
+++ b/Fairies/php/form_customer.css
@@ -26,25 +26,30 @@ header img {
 header a {
   /* テキストサイズ */
   font-size: 5vmin;
-  background-color: #b0daff;
-  /*枠線・上*/
-  border-top: solid 1px #19a7ce;
-  /*枠線・下*/
-  border-bottom: solid 1px #19a7ce;
+  padding-left: 3vmin;
+  padding-right: 3vmin;
+  padding-bottom: 8vmin;
   /*枠線・右*/
-  border-right: solid 1px #19a7ce;
+  border-right: solid 4px #146C94;
   /*枠線・左*/
-  border-left: solid 1px #19a7ce;
+  border-left: solid 4px #146C94;
   /* 下線消す */
   text-decoration: none;
   margin-right: 15px;
   /* 高さ */
   height: 7vmin;
+  color: black;
   align-items: center;
+  transition: transform 0.2s;
 }
-/* カーソルの重なったときの処理 */
-header a :hover {
-  background-color: aqua;
+
+header a:active {
+  transform: translateY(0.1em); /* ボタンがクリックされたときに少し下に移動させる */
+}
+
+header a:hover{
+  background-color: #efffff;
+  color: inherit; /* リンクの色を親要素の色に継承する */
 }
 /* main */
 main {
